# modmesh

./: .clang-format  .clang-tidy  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  CODINGSTYLE.md  CONTRIBUTORS.md  COPYING  Makefile  README.md  README.rst  STYLE.md  STYLE.rst  setup.py  startup.py
cpp/binary/pymod_modmesh/: CMakeLists.txt  module.cpp
cpp/binary/pymod_solvcon/: CMakeLists.txt  module.cpp
cpp/binary/viewer/: CMakeLists.txt  main.cpp  viewer.cpp
cpp/modmesh/: CMakeLists.txt  SerializableItem.cpp  SerializableItem.hpp  base.hpp  grid.hpp  math.hpp  modmesh.hpp  profile.hpp
cpp/modmesh/bernstein/: CMakeLists.txt  bernstein.cpp
cpp/modmesh/buffer/: Algorithm.hpp  BufferBase.hpp  BufferExpander.cpp  BufferExpander.hpp  CMakeLists.txt  ConcreteBuffer.cpp  ConcreteBuffer.hpp  ExpandableBuffer.cpp  ExpandableBuffer.hpp  SimpleArray.cpp  SimpleArray.hpp  SimpleCollector.hpp  buffer.hpp  bufferbase.hpp  matmul.cpp  matmul.hpp  small_vector.hpp
cpp/modmesh/inout/: CMakeLists.txt  gmsh.cpp  gmsh.hpp  inout.hpp  inout_util.cpp  inout_util.hpp  plot3d.cpp  plot3d.hpp
cpp/modmesh/io/: CMakeLists.txt  gmsh.hpp  io.hpp
cpp/modmesh/linalg/: CMakeLists.txt  EigenSystem.cpp  EigenSystem.hpp  factorization.hpp  kalman_filter.hpp  lapack_compat.hpp  linalg.hpp  lu_factorization.hpp
cpp/modmesh/math/: CMakeLists.txt  Complex.hpp  blas_compat.cpp  blas_compat.hpp  lapack_compat.hpp  math.hpp
cpp/modmesh/mathtype/: CMakeLists.txt  Complex.hpp  mathtype.hpp
cpp/modmesh/mesh/: CMakeLists.txt  StaticMesh.hpp  StaticMesh_boundary.cpp  StaticMesh_interior.cpp  mesh.hpp  plot3d.cpp  plot3d.hpp  plot3d2mesh.cpp
cpp/modmesh/multidim/: CMakeLists.txt  GradientElement.cpp  GradientElement.hpp  euler.hpp  euler_bc.cpp  euler_ce.cpp  euler_gradient.cpp  euler_march.cpp  euler_solution.cpp  multidim.hpp
cpp/modmesh/oasis/: CMakeLists.txt  oasis_device.cpp  oasis_device.hpp
cpp/modmesh/onedim/: CMakeLists.txt  Euler1DCore.cpp  Euler1DCore.hpp  Euler1DSolver.cpp  Euler1DSolver.hpp  core.hpp  onedim.hpp
cpp/modmesh/pilot/: CMakeLists.txt  R2DWidget.cpp  R2DWidget.hpp  R3DWidget.cpp  R3DWidget.hpp  RAction.cpp  RAction.hpp  RAxisMark.cpp  RAxisMark.hpp  RCameraController.cpp  RCameraController.hpp  RManager.cpp  RManager.hpp  RMenu.cpp  RMenu.hpp  RParameter.cpp  RParameter.hpp  RPythonConsoleDockWidget.cpp  RPythonConsoleDockWidget.hpp  RStaticMesh.cpp  RStaticMesh.hpp  RVisionDockWidget.cpp  RVisionDockWidget.hpp  RWorld.cpp  RWorld.hpp  RWorldRenderer2d.cpp  RWorldRenderer2d.hpp  common_detail.hpp  pilot.hpp  wrap_pilot.cpp  wrap_pilot.hpp
cpp/modmesh/pymod/: root_modmesh.cpp  root_pymod.hpp  wrap_Toggle.cpp  wrap_profile.cpp
cpp/modmesh/python/: CMakeLists.txt  common.cpp  common.hpp  module.cpp  module.hpp  python.cpp  python.hpp  wrap_config.cpp  wrap_config.hpp
cpp/modmesh/serialization/: CMakeLists.txt  SerializableItem.cpp  SerializableItem.hpp
cpp/modmesh/simd/: CMakeLists.txt  simd.hpp  simd_generic.hpp  simd_support.cpp  simd_support.hpp
cpp/modmesh/spacetime/: CMakeLists.txt  Celm.hpp  Celm_decl.hpp  ElementBase.hpp  ElementBase_decl.hpp  Field.hpp  Field_decl.hpp  Grid.hpp  Grid_decl.hpp  Selm.hpp  Selm_decl.hpp  Solver.hpp  SolverBase.hpp  SolverBase_decl.hpp  base_spacetime.hpp  core.cpp  core.hpp  io.cpp  io.hpp  math.hpp  spacetime.hpp  system.hpp  type.hpp
cpp/modmesh/svg/: CMakeLists.txt  svg.cpp  svg.hpp
cpp/modmesh/testhelper/: CMakeLists.txt
cpp/modmesh/toggle/: CMakeLists.txt  RadixTree.cpp  RadixTree.hpp  SerializableProfiler.hpp  callprofiler.hpp  callstackprofiler.hpp  profile.cpp  profile.hpp  profileRadixTree.hpp  toggle.cpp  toggle.hpp
cpp/modmesh/transform/: CMakeLists.txt  fourier.cpp  fourier.cuh  fourier.hpp  transform.hpp
cpp/modmesh/universe/: CMakeLists.txt  ViewTransform2d.hpp  World.cpp  World.hpp  bernstein.cpp  bernstein.hpp  bezier.hpp  coord.hpp  polygon.cpp  polygon.hpp  polygon_boolean.hpp  rtree.hpp  universe.hpp
cpp/modmesh/view/: CMakeLists.txt  PythonInterpreter.cpp  PythonInterpreter.hpp  R3DWidget.cpp  R3DWidget.hpp  R3DWorld.cpp  R3DWorld.hpp  RAction.cpp  RAction.hpp  RApplication.cpp  RApplication.hpp  RAxisMark.cpp  RAxisMark.hpp  RCameraController.cpp  RCameraController.hpp  RMainWindow.cpp  RMainWindow.hpp  RManager.cpp  RManager.hpp  RMenu.cpp  RMenu.hpp  RParameter.cpp  RParameter.hpp  RPythonConsole.cpp  RPythonConsole.hpp  RPythonConsoleDockWidget.cpp  RPythonConsoleDockWidget.hpp  RPythonText.cpp  RPythonText.hpp  RStaticMesh.cpp  RStaticMesh.hpp  RWorld.cpp  RWorld.hpp  common_detail.hpp  view.hpp  wrap_view.cpp  wrap_view.hpp
cpp/solvcon/: CMakeLists.txt  base.hpp  grid.hpp  solvcon.hpp
cpp/solvcon/buffer/: BufferBase.hpp  BufferExpander.cpp  BufferExpander.hpp  CMakeLists.txt  ConcreteBuffer.hpp  SimpleArray.cpp  SimpleArray.hpp  SimpleCollector.hpp  buffer.hpp  matmul.hpp  small_vector.hpp
cpp/solvcon/inout/: CMakeLists.txt  gmsh.cpp  gmsh.hpp  inout.hpp  inout_util.cpp  inout_util.hpp  plot3d.cpp  plot3d.hpp
cpp/solvcon/linalg/: CMakeLists.txt  EigenSystem.cpp  EigenSystem.hpp  factorization.hpp  kalman_filter.hpp  linalg.hpp  lu_factorization.hpp
cpp/solvcon/math/: CMakeLists.txt  Complex.hpp  blas_compat.cpp  blas_compat.hpp  lapack_compat.hpp  math.hpp
cpp/solvcon/mesh/: CMakeLists.txt  StaticMesh.hpp  StaticMesh_boundary.cpp  StaticMesh_interior.cpp  mesh.hpp
cpp/solvcon/multidim/: CMakeLists.txt  GradientElement.cpp  (+8 more)
gtests/: CMakeLists.txt  test_nonpython_radixtree.cpp  test_nopython_buffer.cpp  test_nopython_callprofiler.cpp  test_nopython_callprofilerserializer.cpp  test_nopython_formatter.cpp  test_nopython_inout.cpp  test_nopython_io.cpp  test_nopython_mdspan.cpp  test_nopython_modmesh.cpp  test_nopython_multidim.cpp  test_nopython_profile_radixtree.cpp  test_nopython_radixtree.cpp  test_nopython_rtree.cpp  test_nopython_serializable.cpp  test_nopython_solvcon.cpp  test_nopython_transform.cpp
profiling/cprof/: CMakeLists.txt  callprofiler_gprof.cpp  callprofiler_workload.hpp  generate_workload.py  run.py
(+677 files in other folders)
